# popeye-interpreter

./: .gitignore  CMakeLists.txt  README.md  interprator.puml
documents/: 30-day_interpreter_plan.md  design_document.md
examples/: example1.popeye  example2.popeye  example3.popeye  setup_examples.sh
include/interpreter/: Ast.h  Evaluator.h  ExpNode.h  Interpreter.h  StmtNode.h  Token.h  TokenType.h  Util.h  lexer.h  node.h  parser.h  symbol_table.h  value.h  version.h
include/interpreter/AST/node/: ASTNode.h  AssignmentNode.h  BinaryOpNode.h  LiteralNode.h  NodeFactory.h  NodeType.h  UnaryOpNode.h  VariableNode.h
include/interpreter/AST/parser/: Parser.h
include/interpreter/lexer/: Lexer.h  Token.h  TokenType.h
include/interpreter/memory/: SymbolTable.h  Value.h
language_examples/: example1.popeye  example2.popeye
src/: Main.cpp  main.cpp
src/interpreter/: Ast.cpp  CMakeLists.txt  Evaluator.cpp  Interpreter.cpp  lexer.cpp  node.cpp  parser.cpp  symbol_table.cpp  value.cpp
src/interpreter/AST/node/: NodeFactory.cpp
src/interpreter/lexer/: lexer.cpp
src/interpreter/memory/: value.cpp
test/: CMakeLists.txt  test_main.cpp
